--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,7 @@ version = "0.1.0"
 
 [deps]
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
+StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
+
+[compat]
+StringViews = "1.3.4"
