--- a/Project.toml
+++ b/Project.toml
@@ -9,3 +9,10 @@ StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
 
 [compat]
 StringViews = "1.3.4"
+Test = "1.11.0"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
