--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["jsager621"]
 version = "0.1.0"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
 
 [compat]
+Dates = "1.11.0"
 StringViews = "1.3.4"
 Test = "1.11.0"
 
